<resources>
    <string name="app_name">GameBacklog</string>
    <string name="action_settings">Settings</string>
    <string name="dummy_fifa_19">FIFA 19</string>
    <string name="dummy_status">Playing</string>
    <string name="dummy_platform">PS4 Pro</string>
    <string name="dummy_date">31/10/2017</string>
    <string name="title_activity_update">UpdateActivity</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="notes_hint">Notes</string>
    <string name="platform_hint">Platform</string>
    <string name="title_hint">Title</string>
    <string name="status_hint">Status</string>
    <string name="status1">Want to play</string>
    <string name="status2">Playing</string>
    <string name="status3">Stalled</string>
    <string name="status4">Dropped</string>

    <string-array name="status">
        <item>@string/status1</item>
        <item>@string/status2</item>
        <item>@string/status3</item>
        <item>@string/status4</item>
    </string-array>
</resources>
